# hex-grid

./: CMakeLists.txt  README.md  main.py  setup.py
src/cpp/: main.cpp  wrapper.cpp
src/cpp/planet/: planet.cpp  planet.h
src/cpp/planet/grid/: corner.h  create_grid.cpp  edge.h  grid.cpp  grid.h  tile.cpp  tile.h
src/cpp/render/: Colour.h  globe_renderer.cpp  globe_renderer.h
src/render/: globe_renderer.py
